--- a/app/src/main/res/layout/activity_pedidos_tia.xml
+++ b/app/src/main/res/layout/activity_pedidos_tia.xml
@@ -55,6 +55,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFEEE1"
+        app:itemIconTint="@color/login_fundo"
+        app:itemTextColor="@color/login_fundo"
         app:menu="@menu/bottom_navigation_menu" />
 
 </LinearLayout>
