--- a/app/src/main/res/layout/item_historico.xml
+++ b/app/src/main/res/layout/item_historico.xml
@@ -29,7 +29,6 @@
                 android:text="data"
                 android:textColor="@color/bege"
                 android:textSize="10sp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,7 +41,6 @@
                 android:textAlignment="viewStart"
                 android:textColor="@color/bege"
                 android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/txtStatusHistorico"
                 app:layout_constraintStart_toEndOf="@+id/txtDataHistorico"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +49,7 @@
                 android:id="@+id/txtTotalHistorico"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="total"
+                android:text="R$ 000.00"
                 android:textColor="@color/bege"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="@+id/txtStatusHistorico"
