--- a/app/src/main/res/layout/item_carrinho.xml
+++ b/app/src/main/res/layout/item_carrinho.xml
@@ -5,20 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/marro_comedori_tia"
-    android:paddingStart="8dp"
     android:paddingBottom="8dp">
 
     <TextView
         android:id="@+id/txtNomeProduto"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/itim"
         android:singleLine="false"
         android:text="Nome do produto"
+        android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.097"
+        app:layout_constraintEnd_toStartOf="@+id/layoutQuantidade"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -28,14 +27,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/itim"
-        android:text="R$ 00,00"
+        android:text="R$ 0000,00"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.898"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txtNomeProduto"
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -44,9 +41,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/txtSoma"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/txtNomeProduto"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@+id/txtNomeProduto">
 
         <ImageView
             android:id="@+id/imgRetirar"
@@ -62,9 +57,9 @@
             android:id="@+id/txtQuantidade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:fontFamily="@font/itim"
-            android:text="No"
+            android:text="000"
+            android:textAlignment="center"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imgRetirar"
@@ -75,7 +70,6 @@
             android:id="@+id/imgAdicionar"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginStart="12dp"
             app:layout_constraintBottom_toBottomOf="@+id/txtQuantidade"
             app:layout_constraintStart_toEndOf="@+id/txtQuantidade"
             app:layout_constraintTop_toTopOf="@+id/txtQuantidade"
