--- a/app/src/main/res/layout/activity_modificar_produto.xml
+++ b/app/src/main/res/layout/activity_modificar_produto.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
+    android:layout_height="match_parent"
     android:background="#FFEEE1"
-    android:backgroundTint="#FFEEE1">
+    tools:context=".activities.modificar_produto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="300dp"
+        app:cardBackgroundColor="#FFEEE1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,48 +48,6 @@
                 app:layout_constraintStart_toEndOf="@+id/imgProduto"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.134" />
-
-            <TextView
-                android:id="@+id/txtQuantidadeEstoque"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/itim"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.048"
-                app:layout_constraintStart_toEndOf="@+id/imgProduto"
-                app:layout_constraintTop_toBottomOf="@+id/txtNomeProdutoModificarProduto"
-                app:layout_constraintVertical_bias="0.0" />
-
-            <TextView
-                android:id="@+id/txtPrecoEstoque"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/itim"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.048"
-                app:layout_constraintStart_toEndOf="@+id/imgProduto"
-                app:layout_constraintTop_toBottomOf="@+id/txtQuantidadeEstoque"
-                app:layout_constraintVertical_bias="0.047" />
-
-            <TextView
-                android:id="@+id/btnModificarProduto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Modificar Produto"
-                android:textColor="#0F5929"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.088"
-                app:layout_constraintStart_toEndOf="@+id/imgProduto"
-                app:layout_constraintTop_toBottomOf="@+id/txtPrecoEstoque"
-                app:layout_constraintVertical_bias="0.35" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
