--- a/app/src/main/res/layout/activity_pagina_inicial.xml
+++ b/app/src/main/res/layout/activity_pagina_inicial.xml
@@ -43,15 +43,7 @@
         app:layout_constraintBottom_toTopOf="@+id/recycleView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_weight="5">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/ic_pessoa" />
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintVertical_weight="5"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/roda_pe"
@@ -66,43 +58,30 @@
 
         <ImageView
             android:id="@+id/cardapio"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:clickable="true"
             android:onClick="cardapio"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.171"
+            app:layout_constraintHorizontal_bias="0.322"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.526"
+            app:layout_constraintVertical_bias="0.555"
             app:srcCompat="@drawable/cardapio" />
 
         <ImageView
-            android:id="@+id/garcom"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:clickable="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.473"
-            app:srcCompat="@drawable/garcom" />
-
-        <ImageView
             android:id="@+id/usuario"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:clickable="true"
             android:onClick="usuario"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.807"
+            app:layout_constraintHorizontal_bias="0.69"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.526"
+            app:layout_constraintVertical_bias="0.555"
             app:srcCompat="@drawable/usuario" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
