--- a/app/src/main/res/layout/item_lista.xml
+++ b/app/src/main/res/layout/item_lista.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         app:cardCornerRadius="16dp"
-        app:cardElevation="16dp"
+        app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +52,7 @@
                     android:text="TextView"
                     android:textAlignment="center"
                     android:textColor="#000000"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
