Validação de email

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -93,8 +93,9 @@
                 android:layout_width="151dp"
                 android:layout_height="45dp"
                 android:fontFamily="@font/jetbrains_mono_thin"
-                android:hint="email ou cpf"
+                android:hint="email"
                 android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:textColor="#80000000"
