--- a/app/src/main/res/layout/cadastro.xml
+++ b/app/src/main/res/layout/cadastro.xml
@@ -70,6 +70,7 @@
                 android:fontFamily="@font/jetbrains_mono_thin"
                 android:hint="nome"
                 android:imeOptions="actionNext"
+                android:inputType="text"
                 android:singleLine="true"
                 android:textColor="#80000000"
                 android:textSize="12sp"
@@ -116,6 +117,7 @@
                 android:fontFamily="@font/jetbrains_mono_thin"
                 android:hint="sobrenome"
                 android:imeOptions="actionNext"
+                android:inputType="text"
                 android:singleLine="true"
                 android:textColor="#80000000"
                 android:textSize="12sp"
@@ -161,6 +163,7 @@
                 android:fontFamily="@font/jetbrains_mono_thin"
                 android:hint="email"
                 android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
                 android:singleLine="true"
                 android:textColor="#80000000"
                 android:textSize="12sp"
@@ -300,6 +303,7 @@
                 android:layout_height="45dp"
                 android:fontFamily="@font/jetbrains_mono"
                 android:hint="confirmar email"
+                android:inputType="textEmailAddress"
                 android:singleLine="true"
                 android:textColor="#80000000"
                 android:textSize="12sp"
