--- a/app/src/main/res/layout/activity_adicionar_produtos.xml
+++ b/app/src/main/res/layout/activity_adicionar_produtos.xml
@@ -34,7 +34,7 @@
             android:id="@+id/imageView6"
             android:layout_width="18dp"
             android:layout_height="18dp"
-            android:onClick="voltarTelaPedidos"
+            android:onClick="voltarTelaAddProdutos"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.01"
