--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -11,7 +11,8 @@
     >
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/comedoria_logotipo"></ImageView>
+        android:layout_width="120dp"
+        android:layout_height="100dp"
+        android:src="@drawable/comedoria_logotipo"
+        app:srcCompat="@drawable/logo"></ImageView>
 </LinearLayout>
