Commit da tela de confirmar pedido

--- a/app/src/main/res/layout/activity_confirmar_pedido.xml
+++ b/app/src/main/res/layout/activity_confirmar_pedido.xml
@@ -4,30 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFEEE1"
     tools:context=".ConfirmarPedido">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutBarraSuperior"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@drawable/borda_arrendondada_inferior_verde_escuro"
+        android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/txtTituloConfirmarPedido"
+            android:id="@+id/txtConfirmarPedido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/itim"
             android:text="Confirmar Pedido"
             android:textColor="@color/white"
-            android:textSize="25sp"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:onClick="voltarTelaConfirmarPedido"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.01"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/voltar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -104,9 +117,9 @@
                 android:layout_marginStart="8dp"
                 android:fontFamily="@font/itim"
                 android:text="TextView"
+                android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/lblCliente"
-                app:layout_constraintTop_toTopOf="@+id/lblCliente"
-                android:textSize="16sp" />
+                app:layout_constraintTop_toTopOf="@+id/lblCliente" />
 
             <TextView
                 android:id="@+id/txtNumeroPedidoConfirmar"
@@ -193,6 +206,7 @@
             android:id="@+id/button4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:onClick="voltarTelaConfirmarPedido"
             android:text="Cancelar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/button5"
