--- a/app/src/main/res/layout/activity_pedidos_tia.xml
+++ b/app/src/main/res/layout/activity_pedidos_tia.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/txtTituloProdutos"
+            android:id="@+id/txtConfirmarPedido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/itim"
