Conexão ADD Funcionários

--- a/app/src/main/res/layout/activity_add_funcionario.xml
+++ b/app/src/main/res/layout/activity_add_funcionario.xml
@@ -16,11 +16,10 @@
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/verde_fundo_categoria"
-        android:textSize="48sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.049" />
@@ -212,6 +211,7 @@
                 android:layout_height="40dp"
                 android:fontFamily="@font/jetbrains_mono"
                 android:hint="senha"
+                android:inputType="textPassword"
                 android:singleLine="true"
                 android:textColor="#80000000"
                 android:textSize="12sp"
@@ -258,6 +258,7 @@
                 android:layout_height="40dp"
                 android:fontFamily="@font/jetbrains_mono"
                 android:hint="confirmar senha"
+                android:inputType="textPassword"
                 android:singleLine="true"
                 android:textColor="#80000000"
                 android:textSize="12sp"
@@ -339,10 +340,10 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/botao"
             android:fontFamily="@font/jetbrains_mono_thin"
+            android:onClick="Cadastrar"
             android:text="Cadastrar"
             android:textColor="@color/black"
             android:textColorLink="@color/botao"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
