--- a/app/src/main/res/layout/activity_perfil_adm.xml
+++ b/app/src/main/res/layout/activity_perfil_adm.xml
@@ -13,6 +13,7 @@
         android:layout_height="350dp"
         android:background="@drawable/rounded_login_ui"
         android:backgroundTint="#244028"
+        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -20,109 +21,66 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498">
 
-        <TextView
-            android:id="@+id/txtNomeFuncionario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="#94E986"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.527"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.12" />
-
-        <TextView
-            android:id="@+id/txtCargoFuncionario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.489"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtNomeFuncionario"
-            app:layout_constraintVertical_bias="0.0" />
-
         <ImageView
             android:id="@+id/btnAddFuncionario"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#94E986"
+            android:onClick="IrAddFuncionario"
             android:padding="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btnAddSaldo"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.116"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.813"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/btnVendas"
+            app:layout_constraintTop_toBottomOf="@+id/btnVendas"
             app:srcCompat="@drawable/adicionar_usuario" />
 
         <ImageView
             android:id="@+id/btnAddSaldo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#94E986"
             android:onClick="IrAddSaldo"
             android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.946"
+            app:layout_constraintEnd_toEndOf="@+id/btnAddFuncionario"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/btnAddFuncionario"
+            app:layout_constraintTop_toBottomOf="@+id/btnAddFuncionario"
             app:srcCompat="@drawable/saldo" />
 
         <ImageView
             android:id="@+id/btnEstoque"
-            android:layout_width="70dp"
+            android:layout_width="0dp"
             android:layout_height="70dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#94E986"
             android:onClick="IrPaginaEstoque"
             android:padding="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btnVendas"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.682"
             app:srcCompat="@drawable/estoque" />
 
         <ImageView
             android:id="@+id/btnVendas"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#94E986"
             android:onClick="IrPedidosTia"
             android:padding="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.88"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.813"
+            app:layout_constraintBottom_toTopOf="@+id/btnAddFuncionario"
+            app:layout_constraintEnd_toEndOf="@+id/btnEstoque"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/btnEstoque"
+            app:layout_constraintTop_toBottomOf="@+id/btnEstoque"
             app:srcCompat="@drawable/etiqueta" />
 
-        <ImageView
-            android:id="@+id/imagePerfil"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:background="@drawable/rounded_profile"
-            android:backgroundTint="#FFEEE1"
-            android:padding="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.128"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.116"
-            app:srcCompat="@drawable/profile" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
